force-app/main/default/objects/Convsta_Conditions_Contractuelles__c/Convsta_Conditions_Contractuelles__c.object-meta.xml
<CustomObject>
    <description>Informations relatives aux conditions contractuelles de l&apos;étudiant en entreprise - A saisir pour sa demande d&apos;expérience professionnelle.</description>
    <label>Conditions Contractuelles</label>
    <nameField>
        <displayFormat>contrat-{000000}</displayFormat>
        <label>Convsta Conditions Contractuelles</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Conditions Contractuelles</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>