force-app/main/default/objects/Convsta_Conditions_Contractuelles__c/fields/Avantages__c.field-meta.xml
<CustomField>
    <fullName>Avantages__c</fullName>
    <description>La liste des avantages offerts à l&apos;étudiant (tickets restaurant, remboursement du transport en commun, etc.) dans le cadre de son expérience professionnelle. Si rien, précisez &quot;Aucun&quot;.</description>
    <inlineHelpText>Liste des avantages offerts à l&apos;étudiant (tickets restaurant, remboursement du transport en commun, etc.) dans le cadre de son expérience professionnelle. Si rien, précisez &quot;Aucun&quot;.</inlineHelpText>
    <label>Avantages</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>