force-app/main/default/objects/Convsta_Conditions_Contractuelles__c/fields/Code_Devise__c.field-meta.xml
<CustomField>
    <fullName>Code_Devise__c</fullName>
    <defaultValue>&apos;EUR&apos;</defaultValue>
    <description>Le code de la devise dans laquelle l&apos;étudiant sera rémunéré dans le cadre de son expérience professionnelle (ex: EUR, USD, CHF, etc.)</description>
    <inlineHelpText>Le code de la devise dans laquelle l&apos;étudiant sera rémunéré dans le cadre de son expérience professionnelle (ex: EUR, USD, CHF, etc.)</inlineHelpText>
    <label>Code Devise</label>
    <length>3</length>
    <type>Text</type>
</CustomField>