force-app/main/default/objects/Convsta_Conditions_Contractuelles__c/fields/Conges_RTT__c.field-meta.xml
<CustomField>
    <fullName>Conges_RTT__c</fullName>
    <description>Le nombre de jours de congé et de RTT auxquels l&apos;étudiant a droit dans le cadre de son expérience professionnelle</description>
    <inlineHelpText>Nombre de jours de congés et RTT auxquels l&apos;étudiant a droit dans le cadre de son expérience professionnelle</inlineHelpText>
    <label>Congés et RTT</label>
    <type>TextArea</type>
</CustomField>