force-app/main/default/objects/Convsta_Conditions_Contractuelles__c/fields/Convsta_Type_de_remuneration__c.field-meta.xml
<CustomField>
    <fullName>Convsta_Type_de_remuneration__c</fullName>
    <label>Type de rémunération</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Mensuelle</fullName>
            </value>
            <value>
                <fullName>Hebdomadaire</fullName>
            </value>
            <value>
                <fullName>Journalière</fullName>
            </value>
            <value>
                <fullName>Mensuel</fullName>
                <isActive>false</isActive>
                <label>Mensuel</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>