force-app/main/default/objects/Convsta_Conditions_Contractuelles__c/fields/Date_de_fin_formule__c.field-meta.xml
<CustomField>
    <fullName>Date_de_fin_formule__c</fullName>
    <formula>MD_Demande__r.Convsta_DateEnd__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date de fin(formule)</label>
    <type>Date</type>
</CustomField>