force-app/main/default/objects/Convsta_Conditions_Contractuelles__c/fields/Date_Debut2__c.field-meta.xml
<CustomField>
    <fullName>Date_Debut2__c</fullName>
    <formula>MD_Demande__r.Convsta_DateStart__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date de début</label>
    <type>Date</type>
</CustomField>