force-app/main/default/objects/Convsta_Conditions_Contractuelles__c/fields/Date_Debut__c.field-meta.xml
<CustomField>
    <fullName>Date_Debut__c</fullName>
    <description>La date à laquelle commence l&apos;expérience professionnelle de l&apos;étudiant</description>
    <inlineHelpText>Date à laquelle commence l&apos;expérience professionnelle de l&apos;étudiant</inlineHelpText>
    <label>Date de Début</label>
    <type>Date</type>
</CustomField>