force-app/main/default/objects/Convsta_Conditions_Contractuelles__c/fields/Date_Fin__c.field-meta.xml
<CustomField>
    <fullName>Date_Fin__c</fullName>
    <description>La date à laquelle se termine l&apos;expérience professionnelle de l&apos;étudiant</description>
    <inlineHelpText>Date à laquelle se termine l&apos;expérience professionnelle de l&apos;étudiant</inlineHelpText>
    <label>Date de Fin</label>
    <type>Date</type>
</CustomField>