force-app/main/default/objects/Convsta_Conditions_Contractuelles__c/fields/debug__c.field-meta.xml
<CustomField>
    <fullName>debug__c</fullName>
    <formula>Date_Fin__c -Date_Debut__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>debug</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>