force-app/main/default/objects/Convsta_Conditions_Contractuelles__c/fields/Derogation_aux_dates_accordee__c.field-meta.xml
<CustomField>
    <fullName>Derogation_aux_dates_accordee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Dérogation aux dates accordées</label>
    <type>Checkbox</type>
</CustomField>