force-app/main/default/objects/Convsta_Conditions_Contractuelles__c/fields/MD_Demande__c.field-meta.xml
<CustomField>
    <fullName>MD_Demande__c</fullName>
    <label>Demande</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Conditions Contractuelles</relationshipLabel>
    <relationshipName>Conditions_Contractuelles</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>