force-app/main/default/objects/Convsta_Conditions_Contractuelles__c/fields/Modalites_de_versement_2__c.field-meta.xml
<CustomField>
    <fullName>Modalites_de_versement_2__c</fullName>
    <label>Modalités de versement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Virement Bancaire</fullName>
            </value>
            <value>
                <fullName>Chèque</fullName>
            </value>
            <value>
                <fullName>Autre</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>