force-app/main/default/objects/Convsta_Conditions_Contractuelles__c/fields/Mode_de_remuneration_2__c.field-meta.xml
<CustomField>
    <fullName>Mode_de_remuneration_2__c</fullName>
    <formula>IF (TEXT (MD_Demande__r.Convsta_Localisation_de_l_entreprise__c) = &quot;A l&apos;étranger&quot;, &quot;Net&quot;, 
IF (TEXT (MD_Demande__r.Convsta_Localisation_de_l_entreprise__c) = &quot;En France&quot;, &quot;Brut&quot;,&quot;&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mode de rémunération</label>
    <type>Text</type>
</CustomField>