force-app/main/default/objects/Convsta_Conditions_Contractuelles__c/fields/Moyen_d_Obtention__c.field-meta.xml
<CustomField>
    <fullName>Moyen_d_Obtention__c</fullName>
    <description>De quelle façon l&apos;étudiant a obtenu son expérience professionnelle</description>
    <inlineHelpText>De quelle façon l&apos;étudiant a obtenu son expérience professionnelle</inlineHelpText>
    <label>Moyen d&apos;Obtention</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Careers Forum</fullName>
            </value>
            <value>
                <fullName>emlyon job board</fullName>
            </value>
            <value>
                <fullName>emlyon Career Event</fullName>
            </value>
            <value>
                <fullName>Candidature spontanée</fullName>
            </value>
            <value>
                <fullName>Site internet de l&apos;entreprise</fullName>
            </value>
            <value>
                <fullName>Réseau institut Paul Bocuse (IHM)</fullName>
            </value>
            <value>
                <fullName>Réseau Lancaster (ETD)</fullName>
            </value>
            <value>
                <fullName>Réseau LMU (ETD)</fullName>
            </value>
            <value>
                <fullName>Réseau emlyon</fullName>
                <isActive>false</isActive>
                <label>Réseau emlyon</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>