force-app/main/default/objects/Convsta_Conditions_Contractuelles__c/fields/Programmes_Concernes__c.field-meta.xml
<CustomField>
    <fullName>Programmes_Concernes__c</fullName>
    <label>Programmes Concernés</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Moyen_d_Obtention__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Offres Institut Paul Bocuse</fullName>
            </value>
            <value>
                <fullName>Offres université de Lancaster</fullName>
            </value>
            <value>
                <fullName>Offres université LMU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>