force-app/main/default/objects/Convsta_Conditions_Contractuelles__c/fields/Remuneration_mensualisee__c.field-meta.xml
<CustomField>
    <fullName>Remuneration_mensualisee__c</fullName>
    <formula>IF(TEXT( Convsta_Type_de_remuneration__c )= &apos;Journalière&apos;,  Remuneration_Mensuelle__c  * 20, 
IF(TEXT(Convsta_Type_de_remuneration__c )= &apos;Hebdomadaire&apos;, Remuneration_Mensuelle__c  * 4, 
Remuneration_Mensuelle__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rémunération mensualisée</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>