force-app/main/default/objects/Convsta_Conditions_Contractuelles__c/fields/Remuneration_Mensuelle__c.field-meta.xml
<CustomField>
    <fullName>Remuneration_Mensuelle__c</fullName>
    <description>La rénumération mensuelle de l&apos;étudiant dans le cadre de son expérience professionnelle</description>
    <inlineHelpText>Rémumération mensuelle de l&apos;étudiant dans le cadre de son expérience professionnelle</inlineHelpText>
    <label>Rémunération Brute en Euros</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>