force-app/main/default/objects/Convsta_Conditions_Contractuelles__c/fields/Temporalite_Stage__c.field-meta.xml
<CustomField>
    <fullName>Temporalite_Stage__c</fullName>
    <description>Le stage est-il à temps plein ou à temps partiel?</description>
    <inlineHelpText>Le stage est-il à temps plein ou à temps partiel?</inlineHelpText>
    <label>Temporalité du Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Temps Plein</fullName>
            </value>
            <value>
                <fullName>Temps Partiel</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>