force-app/main/default/objects/Convsta_Conditions_Contractuelles__c/fields/Temps_Travail_Hebdomadaire__c.field-meta.xml
<CustomField>
    <fullName>Temps_Travail_Hebdomadaire__c</fullName>
    <description>Le nombre d&apos;heures de travail par semaine indiqués dans le contrat de l&apos;étudiant</description>
    <inlineHelpText>Nombre d&apos;heures de travail par semaine indiqués dans le contrat de l&apos;étudiant</inlineHelpText>
    <label>Temps de Travail Hebdomadaire</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>