force-app/main/default/objects/Convsta_Conditions_Contractuelles__c/fields/Travail_le_dimanche_la_nuit__c.field-meta.xml
<CustomField>
    <fullName>Travail_le_dimanche_la_nuit__c</fullName>
    <description>Merci de préciser la clause juste si vous travaillez de nuit ou le weekend</description>
    <label>Travail le dimanche, la nuit</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>