force-app/main/default/objects/Convsta_Conditions_Contractuelles__c/validationRules/Date_de_Debut_Minimum.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_de_Debut_Minimum</fullName>
    <active>true</active>
    <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp;  MD_Demande__r.Convsta_Table_des_Regles_Experience_Pro__r.Ann_e_suivante__c = false 
&amp;&amp;
NOT (ISPICKVAL (  MD_Demande__r.Convsta_Type_de_demande__c , &quot;Validation_experience_anterieure&quot;))
&amp;&amp; 
Date_Debut__c
&lt; 
MD_Demande__r.Convsta_Table_des_Regles_Experience_Pro__r.Date_Demarrage_Au_Plus_Tot__c</errorConditionFormula>
    <errorDisplayField>Date_Debut__c</errorDisplayField>
    <errorMessage>Votre expérience professionnelle ne peut pas débuter avant la date prévue à cet effet par votre programme.</errorMessage>
</ValidationRule>