force-app/main/default/objects/Convsta_Conditions_Contractuelles__c/validationRules/Date_de_Fin_Butoire.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_de_Fin_Butoire</fullName>
    <active>false</active>
    <description>La date de fin est nécessaire si le type de contrat est différent de CDI ou CDD. 
La date de fin ne doit pas dépasser celle précisée dans le programme.</description>
    <errorConditionFormula>!$User.ByPass_RV__c 
&amp;&amp; 
!ISNEW()
&amp;&amp;
IF(
    TEXT(MD_Demande__r.Convsta_TypeContrat__c)  &lt;&gt; &quot;CDI&quot; &amp;&amp; 
    TEXT(MD_Demande__r.Convsta_TypeContrat__c)  &lt;&gt; &quot;Contrat de travail de l&apos;entreprise (CDD/Intérim)&quot;, 
      ISBLANK( Date_Fin__c ) ||
Date_Fin__c &gt; MD_Demande__r.Convsta_Table_des_Regles_Experience_Pro__r.Date_Maximum_Fin_Stage__c, 
      false
)</errorConditionFormula>
    <errorDisplayField>Date_Fin__c</errorDisplayField>
    <errorMessage>Veuillez renseigner une date de fin de contrat conforme.</errorMessage>
</ValidationRule>