force-app/main/default/objects/Convsta_Conditions_Contractuelles__c/validationRules/Date_de_Jury_Diplome.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_de_Jury_Diplome</fullName>
    <active>false</active>
    <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
Date_Fin__c 
&gt;
 MD_Demande__r.Convsta_Table_des_Regles_Experience_Pro__r.Date_Jury_Diplome__c</errorConditionFormula>
    <errorDisplayField>Date_Fin__c</errorDisplayField>
    <errorMessage>Votre expérience professionnelle doit se terminer avant la date de jury de votre diplôme.</errorMessage>
</ValidationRule>