force-app/main/default/objects/Convsta_Conditions_Contractuelles__c/validationRules/Date_Debut_Avant_Date_Fin.validationRule-meta.xml
<ValidationRule>
    <fullName>Date_Debut_Avant_Date_Fin</fullName>
    <active>true</active>
    <description>La date de début doit être avant la date de fin</description>
    <errorConditionFormula>! $User.ByPass_RV__c 
&amp;&amp; 
Date_Fin__c
 &lt; 
Date_Debut__c</errorConditionFormula>
    <errorDisplayField>Date_Fin__c</errorDisplayField>
    <errorMessage>La date de fin de votre expérience ne peut pas être avant la date de début de cette dernière.</errorMessage>
</ValidationRule>