force-app/main/default/objects/Convsta_Conditions_Contractuelles__c/validationRules/Duree_Maximum.validationRule-meta.xml
<ValidationRule>
    <fullName>Duree_Maximum</fullName>
    <active>true</active>
    <errorConditionFormula>! $User.ByPass_RV__c
&amp;&amp;
(TEXT(MD_Demande__r.Convsta_Type_de_demande__c) = &quot;Stage&quot;)
&amp;&amp;
(Date_Fin__c -Date_Debut__c) &gt;=
MD_Demande__r.Convsta_Table_des_Regles_Experience_Pro__r.Duree_Stage_Maximum__c</errorConditionFormula>
    <errorMessage>Votre expérience professionnelle est trop longue. Veuillez saisir des dates en accord avec les conditions de votre programme.</errorMessage>
</ValidationRule>